<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UHFReader816UBT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_iso18000_6c">Iso18000_6c_Activity</string>
    <string name="title_activity_cmd">CmdActivity</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_read_w">ReadWActivity</string>
    <string name="title_activity_get_active">GetActive</string>
    <string name="dmin">MinFreq:</string>
    <string name="band">Band:</string>
    <string name="dmax">MaxFreq:</string>
    <string name="power">Power:</string>
    <string name="clearlistview">Clear</string>
    <string name="txtMemory">Memory:</string>
    <string name="txtwordptr">WordPtr:</string>
    <string name="txtlength">Length:</string>
    <string name="txtpwd">Password(Hex):</string>
    <string name="txtcontent">Content(Hex):</string>

    <string name="txtread">Read</string>
    <string name="txtwrite">Write</string>
    <string name="txtTimes">Count</string>
    <string name="txtNumber">Number:</string>
    <string name="txtget">Get</string>
    <string name="txtset">Set</string>

    <string name="btrSearch">Search Device</string>
    <string name="btrstop">Stop</string>
    <string name="btrscan">Scan</string>
    <string name="strsuccess">Success</string>
    <string name="strerror">Failed</string>
    <string-array name="men_select">
        <item>Reserve</item>
        <item>EPC</item>
        <item>TID</item>
        <item>User</item>
    </string-array>
    <string-array name="Fre_select">
        <item>902.75 MHz</item>
        <item>903.25 MHz</item>
        <item>903.75 MHz</item>
        <item>904.25 MHz</item>
        <item>904.75 MHz</item>
        <item>905.25 MHz</item>
        <item>905.75 MHz</item>
        <item>906.25 MHz</item>
        <item>906.75 MHz</item>
        <item>907.25 MHz</item>
        <item>907.75 MHz</item>
        <item>908.25 MHz</item>
        <item>908.75 MHz</item>
        <item>909.25 MHz</item>
        <item>909.75 MHz</item>
        <item>910.25 MHz</item>
        <item>910.75 MHz</item>
        <item>911.25 MHz</item>
        <item>911.75 MHz</item>
        <item>912.25 MHz</item>
        <item>912.75 MHz</item>
        <item>913.25 MHz</item>
        <item>913.75 MHz</item>
        <item>914.25 MHz</item>
        <item>914.75 MHz</item>
        <item>915.25 MHz</item>
        <item>915.75 MHz</item>
        <item>916.25 MHz</item>
        <item>916.75 MHz</item>
        <item>917.25 MHz</item>
        <item>917.75 MHz</item>
        <item>918.25 MHz</item>
        <item>918.75 MHz</item>
        <item>919.25 MHz</item>
        <item>919.75 MHz</item>
        <item>920.25 MHz</item>
        <item>920.75 MHz</item>
        <item>921.25 MHz</item>
        <item>921.75 MHz</item>
        <item>922.25 MHz</item>
        <item>922.75 MHz</item>
        <item>923.25 MHz</item>
        <item>923.75 MHz</item>
        <item>924.25 MHz</item>
        <item>924.75 MHz</item>
        <item>925.25 MHz</item>
        <item>925.75 MHz</item>
        <item>926.25 MHz</item>
        <item>926.75 MHz</item>
        <item>927.25 MHz</item>
    </string-array>
    <string-array name="Power_select">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
    </string-array>
    <string name="title_activity_scan_mode_group">ScanModeGroup</string>
</resources>
