<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/epc0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rm_6c_et_height"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:editable="false"
            android:focusable="false" />
        <!--
        <EditText
            android:id="@+id/epc1" 
            android:layout_width="match_parent"
            android:layout_height="@dimen/rm_6c_et_height"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:editable="false"
            android:focusable="false"
            />
        
        <EditText
            android:id="@+id/epc2" 
            android:layout_width="match_parent"
            android:layout_height="@dimen/rm_6c_et_height"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:editable="false"
            android:focusable="false"
            />
        
        <EditText
            android:id="@+id/epc3" 
            android:layout_width="match_parent"
            android:layout_height="@dimen/rm_6c_et_height"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:editable="false"
            android:focusable="false"
            />
        -->
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/txtMemory" />

            <Spinner
                android:id="@+id/mem_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/txtwordptr" />

            <EditText
                android:id="@+id/et_wordptr"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/txtlength" />

            <EditText
                android:id="@+id/et_length"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/txtpwd" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/txtcontent" />

            <EditText
                android:id="@+id/et_content_6c"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                
                android:gravity="left" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="@dimen/list_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <Button
                android:id="@+id/button_read_6c"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/txtread" />

            <Button
                android:id="@+id/button_write_6c"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/txtwrite" />
        </TableRow>
    </TableLayout>

</LinearLayout>